--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.1",
     "dotenv": "^16.3.1",
     "firebase": "^10.3.1",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -20,10 +21,12 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.8.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
