--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "dotenv": "^16.3.1",
     "firebase": "^10.3.1",
     "formik": "^2.4.5",
+    "i18next": "^23.5.1",
+    "i18next-browser-languagedetector": "^7.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
     "react-player": "^2.13.0",
