--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
