--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "formik": "^2.4.5",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.4",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
