--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.4",
     "react-bootstrap": "^2.8.0",
